# shrike

./: .gitignore  README.md  pyproject.toml
examples/tests/: 01_orphaned_orders.sql  02_cross_server_row_count.sql  03_revenue_reconciliation.sql
src/shrike/: __init__.py  cli.py  engine.py  reports.py
